--- a/languages/custom-login-tr_TR.pot
+++ b/languages/custom-login-tr_TR.pot
@@ -2,313 +2,322 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Custom Login 2.0\n"
 "POT-Creation-Date: 2013-04-15 22:01-0800\n"
-"PO-Revision-Date: 2013-04-17 13:34-0800\n"
-"Last-Translator: Austin Passy <austin@thefrosty.com>\n"
-"Language-Team: \n"
+"PO-Revision-Date: 2013-04-17 07:30+0200\n"
+"Last-Translator: HakanEr <hakanerwptr@gmail.com>\n"
+"Language-Team: hakaner <hakanerwptr@gmail.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 1.5.5\n"
 "X-Poedit-KeywordsList: _;gettext;gettext_noop;__;_e;_x\n"
 "X-Poedit-Basepath: .\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"Language: turkish\n"
+"X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-SearchPath-0: .\n"
 
 #: custom-login.php:319 custom-login.php:630 functions/install.php:32
 #: functions/install.php:40
 msgid "Custom Login Settings"
-msgstr ""
+msgstr "Custom Login Ayarları"
 
 #: custom-login.php:324
 msgid "General Settings"
-msgstr ""
+msgstr "Genel Ayarlar"
 
 #: custom-login.php:332
 msgid "Activate"
-msgstr ""
+msgstr "Etkinleştir"
 
 #: custom-login.php:333
 msgid "Toggle this plugin on &amp; off."
-msgstr ""
+msgstr "Eklentiyi açmak ve kapatmak arasında geçiş yap."
 
 #: custom-login.php:339
 msgid "<h4><abbr title=\"Hyper Text Markup Language\">HTML</abbr></h4>"
-msgstr ""
+msgstr "<h4><abbr title=\"Hyper Text Markup Language\">HTML</abbr></h4>"
 
 #: custom-login.php:346
 msgid "HTML Background Color"
-msgstr ""
+msgstr "HTML Arkaplan Rengi"
 
 #: custom-login.php:353
 msgid "HTML Background Image"
-msgstr ""
+msgstr "HTML Arkaplan Resmi"
 
 #: custom-login.php:354
 msgid "Upload an image or a repeating pattern (optional)."
-msgstr ""
+msgstr "Bir resim veya tekrar eden bir desen yükle (isteğe bağlı)."
 
 #: custom-login.php:361
 msgid "HTML Background Position"
-msgstr ""
+msgstr "HTML Arkaplan Pozisyonu"
 
 #: custom-login.php:362 custom-login.php:410 custom-login.php:465
 msgid ""
 "Allowed strings <code>left, top, center, right, bottom</code>. No more than "
 "two combined! Space delimiter."
 msgstr ""
+"İzin verilen dizeler <code>left, top, center, right, bottom</code>. İkiden "
+"fazla kombinasyon olmaz! Alan sınırlayıcı."
 
 #: custom-login.php:369
 msgid "HTML Background repeat"
-msgstr ""
+msgstr "HTML Arkaplan tekrarı"
 
 #: custom-login.php:381
 msgid "HTML Background size"
-msgstr ""
+msgstr "HTML Arkaplan boyutu"
 
 #: custom-login.php:394
 msgid "<h4>Logo</h4>"
-msgstr ""
+msgstr "<h4>Logo</h4>"
 
 #: custom-login.php:401
 msgid "Logo"
-msgstr ""
+msgstr "Logo"
 
 #: custom-login.php:402
 msgid "Replace the WordPress logo (optional)."
-msgstr ""
+msgstr "WordPress logosunu değiştir (isteğe bağlı)."
 
 #: custom-login.php:409
 msgid "Logo Background Position"
-msgstr ""
+msgstr "Logo Arkaplan Pozisyonu"
 
 #: custom-login.php:417
 msgid "Logo Background repeat"
-msgstr ""
+msgstr "Logo Arkaplan tekrarı"
 
 #: custom-login.php:429
 msgid "Logo Background size"
-msgstr ""
+msgstr "Logo Arkaplan boyutu"
 
 #: custom-login.php:442
 msgid "<h4>Login form</h4>"
-msgstr ""
+msgstr "<h4>Giriş formu</h4>"
 
 #: custom-login.php:449
 msgid "Login Form Background Color"
-msgstr ""
+msgstr "Giriş Formu Arkaplan Rengi"
 
 #: custom-login.php:456
 msgid "Login Form Background URL"
-msgstr ""
+msgstr "Giriş Formu Arkaplan URL"
 
 #: custom-login.php:457
 msgid "Add an image to the form (optional)."
-msgstr ""
+msgstr "Forma bir resim ekle (isteğe bağlı)."
 
 #: custom-login.php:464
 msgid "Login Form Background Position"
-msgstr ""
+msgstr "Giriş Formu Arkaplan Pozisyonu"
 
 #: custom-login.php:472
 msgid "Login Form Background repeat"
-msgstr ""
+msgstr "Giriş Formu Arkaplan tekrarı"
 
 #: custom-login.php:484
 msgid "Login Form Background size"
-msgstr ""
+msgstr "Giriş Formu Arkaplan boyutu"
 
 #: custom-login.php:496
 msgid "Login Form Border Radius"
-msgstr ""
+msgstr "Giriş Formu Çerçeve Yarıçapı"
 
 #: custom-login.php:504
 msgid "Login Form Border Size"
-msgstr ""
+msgstr "Giriş Formu Çerçeve Boyutu"
 
 #: custom-login.php:512
 msgid "Login Form Border Color"
-msgstr ""
+msgstr "Giriş Formu Çerçeve Rengi"
 
 #: custom-login.php:519
 msgid "Login Form Box Shadow"
-msgstr ""
+msgstr "Giriş Formu Kutu Gölgesi"
 
 #: custom-login.php:520
 #, php-format
 msgid "Use <a href=\"%s\">box shadow</a> syntax w/ out color. <code>%s</code>"
 msgstr ""
+"Renksiz bir şekilde <a href=\"%s\">box shadow</a> syntax kullanın. <code>%s</"
+"code>"
 
 #: custom-login.php:527
 msgid "Login Form Box Shadow Color"
-msgstr ""
+msgstr "Giriş Formu Kutu Gölge Rengi"
 
 #: custom-login.php:535
 msgid "<h4>Misc.</h4>"
-msgstr ""
+msgstr "<h4>Çeşitli</h4>"
 
 #: custom-login.php:542
 msgid "Login Form Label Color"
-msgstr ""
+msgstr "Giriş Formu Etiket Rengi"
 
 #: custom-login.php:550
 msgid "<h4>Below form anchor</h4>"
-msgstr ""
+msgstr "<h4>Form altı bağlamı</h4>"
 
 #: custom-login.php:557
 msgid "Below form nav color"
-msgstr ""
+msgstr "Form altı nav rengi"
 
 #: custom-login.php:564
 msgid "Below form nav text-shadow color"
-msgstr ""
+msgstr "Form altı nav metni-gölge rengi"
 
 #: custom-login.php:571
 msgid "Below form nav color hover"
-msgstr ""
+msgstr "Form altı nav vurgu rengi"
 
 #: custom-login.php:578
 msgid "Below form nav text-shadow hover"
-msgstr ""
+msgstr "Form altı nav metni-vurgu gölgesi"
 
 #: custom-login.php:586
 msgid "<h4>Custom HTML/CSS &amp; jQuery</h4>"
-msgstr ""
+msgstr "<h4>Kişisel HTML/CSS &amp; jQuery</h4>"
 
 #: custom-login.php:593
 msgid "Custom CSS"
-msgstr ""
+msgstr "Kişisel CSS"
 
 #: custom-login.php:599
 msgid "Custom HTML"
-msgstr ""
+msgstr "Kişisel HTML"
 
 #: custom-login.php:606
 msgid "Custom jQuery"
-msgstr ""
+msgstr "Kişisel jQuery"
 
 #: custom-login.php:630 functions/post-types.php:37
 msgid "Custom Login"
-msgstr ""
+msgstr "Custom Login"
 
 #: custom-login.php:640
 msgid "Settings"
-msgstr ""
+msgstr "Ayarlar"
 
 #: custom-login.php:672
 msgid "Support this plugin and buy me a beer"
-msgstr ""
+msgstr "Bu eklentiyi destekle ve bana bir bira satın al"
 
 #: custom-login.php:673
 msgid "Rate this plugin on WordPress.org"
-msgstr ""
+msgstr "WordPress.org üzerinde bu eklentiye oy ver"
 
 #: custom-login.php:674
 msgid ""
 "Share your designs on <strong style=\"color:#0066DC;\">Flick</strong><strong "
 "style=\"color:#ff0084;\">r</strong>"
 msgstr ""
+"Tasarımlarını <strong style=\"color:#0066DC;\">Flick</strong><strong style="
+"\"color:#ff0084;\">r</strong> üzerinde paylaş"
 
 #: custom-login.php:675
 msgid "Get support on WordPress.org"
-msgstr ""
+msgstr "WordPress.org üzerinde destek al"
 
 #: custom-login.php:676
 msgid "Contribute development on GitHub"
-msgstr ""
+msgstr "GitHub üzerinde geliştirmeye katkıda bulun"
 
 #: custom-login.php:677
 msgid "Get Custom Login Add-ons"
-msgstr ""
+msgstr "Custom Login Eklentileri Al"
 
 #: custom-login.php:683
 #, php-format
 msgid "<a href=\"%s\">%s</a> | <code>version %s</code>"
-msgstr ""
+msgstr "<a href=\"%s\">%s</a> | <code>sürüm %s</code>"
 
 #: classes/class.settings-api.php:745
 #, php-format
 msgid "%1$s | <a href=\"%2$s\">Dismiss notice</a>"
-msgstr ""
+msgstr "%1$s | <a href=\"%2$s\">Bildirimi yok say</a>"
 
 #: classes/class.settings-api.php:930
 msgid "Error fetching feed"
-msgstr ""
+msgstr "Besleme getirme hatası"
 
 #: classes/class.settings-api.php:941
 msgid "Like Extendd on Facebook"
-msgstr ""
+msgstr "Facebook üzerinde Extendd'i Beğen"
 
 #: classes/class.settings-api.php:942
 msgid "Follow Extendd on Twitter"
-msgstr ""
+msgstr "Twitter üzerinde Extendd'i Takip et"
 
 #: classes/class.settings-api.php:943
 msgid "Follow Austin on Twitter"
-msgstr ""
+msgstr "Twitter üzerinde Austin'i Takip et"
 
 #: classes/class.settings-api.php:944
 msgid "Circle Extendd on Google+"
-msgstr ""
+msgstr "Google+ üzerinde Extendd'i ekle"
 
 #: classes/class.settings-api.php:945
 msgid "Subscribe via email"
-msgstr ""
+msgstr "Eposta ile abone ol"
 
 #: classes/class.settings-api.php:948
 msgid "Latest plugins from Extendd.com"
-msgstr ""
+msgstr "Extendd.com'dan en son eklentiler"
 
 #: functions/post-types.php:25
 msgid "Logins"
-msgstr ""
+msgstr "Giriş"
 
 #: functions/post-types.php:26
 msgid "Login"
-msgstr ""
+msgstr "Giriş"
 
 #: functions/post-types.php:27
 msgid "Add New"
-msgstr ""
+msgstr "Yeni Ekle"
 
 #: functions/post-types.php:28
 msgid "Add New Login"
-msgstr ""
+msgstr "Yeni Giriş Ekle"
 
 #: functions/post-types.php:29
 msgid "Edit Login"
-msgstr ""
+msgstr "Girişi Düzenle"
 
 #: functions/post-types.php:30
 msgid "New Login"
-msgstr ""
+msgstr "Yeni Giriş"
 
 #: functions/post-types.php:31
 msgid "All Logins"
-msgstr ""
+msgstr "Tüm Girişler"
 
 #: functions/post-types.php:32
 msgid "View Login"
-msgstr ""
+msgstr "Girişi Gör"
 
 #: functions/post-types.php:33
 msgid "Search Logins"
-msgstr ""
+msgstr "Girişleri Ara"
 
 #: functions/post-types.php:34
 msgid "No Logins found"
-msgstr ""
+msgstr "Herhangi bir Giriş bulunamadı"
 
 #: functions/post-types.php:35
 msgid "No Logins found in Trash"
-msgstr ""
+msgstr "Çöpte herhangi bir Giriş bulunamadı"
 
 #: functions/welcome.php:56 functions/welcome.php:57
 msgid "Welcome to Custom Login"
-msgstr ""
+msgstr "Custom Login'e Hoş Geldiniz"
 
 #: functions/welcome.php:111
 #, php-format
 msgid "Welcome to Custom Login %s"
-msgstr ""
+msgstr "Custom Login %s Hoş Geldiniz"
 
 #: functions/welcome.php:112
 #, php-format
@@ -316,23 +325,25 @@ msgid ""
 "Thank you for updating to the latest version! Custom Login %s is ready to "
 "make your login page better!"
 msgstr ""
+"Son sürüme güncellediğiniz için teşekkürler! Custom Login %s giriş sayfanızı "
+"daha iyi hale getirmek için hazır!"
 
 #: functions/welcome.php:113
 #, php-format
 msgid "Version %s"
-msgstr ""
+msgstr "Sürüm %s"
 
 #: functions/welcome.php:117
 msgid "What's New"
-msgstr ""
+msgstr "Neler Yeni"
 
 #: functions/welcome.php:122
 msgid "Improved Settings"
-msgstr ""
+msgstr "Geliştirilmiş Ayarlar"
 
 #: functions/welcome.php:126
 msgid "Load times"
-msgstr ""
+msgstr "Yükleme süreleri"
 
 #: functions/welcome.php:127
 msgid ""
@@ -340,10 +351,13 @@ msgid ""
 "it wasn't supposted to. <strong>CL</strong> now caches all queries and "
 "database calls."
 msgstr ""
+"Önceki sürümünde, eklentinin sayfalarda yüklenmesiyle ilgili istenmeyen "
+"sorunları vardı. <strong>CL</strong> artık tüm sorguları ve veritabanı "
+"çağrılarını önbelleğe alır."
 
 #: functions/welcome.php:129
 msgid "Better features"
-msgstr ""
+msgstr "Daha iyi özellikler"
 
 #: functions/welcome.php:130
 #, php-format
@@ -353,14 +367,18 @@ msgid ""
 "authentication to name a few of the add-ons you can find on %sExtendd.com%s "
 "in the future."
 msgstr ""
+"Eklentiyi tamamen yeniden yazmam ile, kişisel eklentiler yazma yeteğim var "
+"(uzantıları düşün), gizli giriş, eposta girişleri ve 2 adım kimlik doğrulama "
+"gibi ileride %sExtendd.com%s üzerinde bulabileceğiniz birkaç eklenti ismi "
+"verebilirim."
 
 #: functions/welcome.php:136
 msgid "Under the Hood"
-msgstr ""
+msgstr "Kaputun Altı"
 
 #: functions/welcome.php:140
 msgid "Settings Class"
-msgstr ""
+msgstr "Ayarlar Sınıfı"
 
 #: functions/welcome.php:141
 #, php-format
@@ -368,10 +386,12 @@ msgid ""
 "The new settings class allows to add your own add-ons! Documentation can be "
 "found on the %sExtendd.com%s site."
 msgstr ""
+"Yeni ayarlar sınıfı kendi eklentilerinizi eklemenize izin verir! Belgeler "
+"%sExtendd.com%s sitesinde bulunabilir."
 
 #: functions/welcome.php:145
 msgid "Templates"
-msgstr ""
+msgstr "Şablonlar"
 
 #: functions/welcome.php:146
 #, php-format
@@ -379,21 +399,25 @@ msgid ""
 "Custom login %stemplates%s can be created in your theme using the new login "
 "template add-on (coming soon)."
 msgstr ""
+"Custom login %sşablonları%s yeni login template eklentisi ile (yakında "
+"geliyor) temanızın içinde oluşturulabilir."
 
 #: functions/welcome.php:156
 msgid "Go to Custom Login Settings"
-msgstr ""
+msgstr "Custom Login Ayarlarına Gidin"
 
 #: functions/upgrades/upgrades.php:25
 msgid "Custom Login - Upgrades"
-msgstr ""
+msgstr "Custom Login - Yükseltmeler"
 
 #: functions/upgrades/upgrades.php:28
 msgid ""
 "The upgrade process has started, please be patient. This could take several "
 "minutes. You will be automatically redirected when the upgrade is finished."
 msgstr ""
+"Yükseltme işlemi başladı, lütfen sabırlı olun. Bu işlem birkaç dakika "
+"sürebilir. Yükseltme bittiğinde otomatik olarak yönlendirileceksiniz."
 
 #: functions/upgrades/upgrades.php:59
 msgid "Custom Login Upgrades"
-msgstr ""
+msgstr "Custom Login Yükseltmeleri"
