--- a/classes/changelog.txt
+++ b/classes/changelog.txt
@@ -1,3 +1,3 @@
 Version 1.0.4 (4/22/13)
 
-Only enqueue admin scripts on options-general.php $hook
+Only enqueue admin scripts on "settings_page_custom-login" $hook
