--- a/classes/changelog.txt
+++ b/classes/changelog.txt
@@ -1,3 +1,7 @@
+Version 1.0.8 (12/3/13)
+
+Make sure the $announcement isn't empty or has error before caching.
+
 Version 1.0.7 (5/20/13)
 
 !empty( $old_message )
