Updated settings API to version 1.0.9
git-svn-id: https://plugins.svn.wordpress.org/custom-login/trunk@824133 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/classes/changelog.txt
+++ b/classes/changelog.txt
@@ -1,3 +1,8 @@
+Version 1.0.9 (12/17/13)
+
+Added admin.js
+Updated chosen().js to version 1.0.0
+
 Version 1.0.8 (12/3/13)
 
 Make sure the $announcement isn't empty or has error before caching.
