--- a/classes/changelog.txt
+++ b/classes/changelog.txt
@@ -1,3 +1,6 @@
+Version 1.0.11 (1/23/14)
+Added helper class wp_remote_get_set_transient();
+
 Version 1.0.10 (1/8/14)
 
 Updated chosen() class names for 1.0.0
